--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: postgres
+    image: postgres:15
     container_name: inventory-db
     environment:
       POSTGRES_DB: ${DB_NAME}
