--- a/.env
+++ b/.env
@@ -8,16 +8,16 @@
 # HOST_API=https://inventory-system-nest-production.up.railway.app/api
 JWT_SECRET=M1S3cr3tJWTK31
 
-# DB_NAME=railway
-# DB_PASSWORD=3B2Ag-Fd-5a6D3acBa3ba*15g--Eb-bB
-# DB_HOST=monorail.proxy.rlwy.net
-# DB_PORT=53133
-# DB_USERNAME=postgres
-
-DB_NAME=inventory
-DB_PASSWORD=postgres
-DB_HOST=localhost
-DB_PORT=5432
+DB_NAME=railway
+DB_PASSWORD=3B2Ag-Fd-5a6D3acBa3ba*15g--Eb-bB
+DB_HOST=monorail.proxy.rlwy.net
+DB_PORT=53133
 DB_USERNAME=postgres
+
+# DB_NAME=inventory
+# DB_PASSWORD=postgres
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_USERNAME=postgres
 PORT=3000
 HOST_API=https://inventory-system-nest-production.up.railway.app/api
